--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
         <artifactId>guava</artifactId>
         <version>22.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers</artifactId>
+        <version>1.11.1</version>
+    </dependency>    
+    <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>selenium</artifactId>
+        <version>1.11.1</version>
+    </dependency>    
     </dependencies>
 
 </project>
