--- a/pom.xml
+++ b/pom.xml
@@ -51,38 +51,61 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-	    <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-    	    <artifactId>webdrivermanager</artifactId>
-            <version>3.3.0</version>
-            <scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+		        <groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
 			<scope>test</scope>
-        </dependency>
-          <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>22.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>testcontainers</artifactId>
-        <version>1.11.1</version>
-    </dependency>    
-    <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>selenium</artifactId>
-        <version>1.11.1</version>
-    </dependency>    
-    </dependencies>
-
+		</dependency>
+		<dependency>
+		        <groupId>io.github.bonigarcia</groupId>
+    			<artifactId>webdrivermanager</artifactId>
+			<version>3.3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		        <groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.141.59</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		        <groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>22.0</version>
+		</dependency>
+		<dependency>
+		        <groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.11.1</version>
+		</dependency>    
+		<dependency>
+		        <groupId>org.testcontainers</groupId>
+			<artifactId>selenium</artifactId>
+			<version>1.11.1</version>
+		</dependency>
+		<dependency>
+		        <groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+	       </dependencies>
+	       <build>
+		 <plugins>
+		   <plugin>
+		     <groupId>pl.project13.maven</groupId>
+		     <artifactId>git-commit-id-plugin</artifactId>
+		   </plugin>
+		   <plugin>
+		     <groupId>org.springframework.boot</groupId>
+		     <artifactId>spring-boot-maven-plugin</artifactId>
+		     <version>1.5.9.RELEASE</version>
+		     <executions>
+	               <execution>
+			 <goals>
+			   <goal>repackage</goal>
+			 </goals>
+		       </execution>
+		     </executions>
+		   </plugin>
+		 </plugins>
+	       </build>
 </project>
